* The Group Builder has been removed from rBA, to be replaced by a different
  mechanism to get appliances built quickly. (RBL-2514)
* The Conary repository permission management web user interface has
  been modified to use the term "Role" instead of "Group". (RBL-2580)
* New appliance projects will be prepopulated with a sample group recipe ready
  for extending. (RBL-2515)

Internal Changes
----------------
* rBuilder now requires Conary 2.0. (RBL-2580)

Command-Line Client Changes
---------------------------

* The command-line client's build-create command now accepts the --name option
  to set the name of the new build, and --build-notes and --build-notes-file
  to set the build notes from the command-line and from a file, respectively.
  (RBL-2486)

Bug Fixes
---------

* A bug that prevented image builds from succeeding when a project is
  hidden has been fixed. (RBL-2619)

Changes in 4.0.1
================

Web Front End Changes
---------------------

* Project owners and admins may now configure a project to send commit mail
  to arbitrary e-mail addresses. (RBL-1568)
* Uploading an invalid GPG key no longer causes the web UI to backtrace.
  (RBL-1625)
* A regression in the anaconda-templates trove picker in the advanced build
  option has been fixed. (RBL-1760)
* Apache's access_log and error_log may now be viewed and downloaded from
  the Appliance Agent log viewer. (RBL-2250)
* Accessing help in project resources now opens a new {window, tab}.
  (RBL-2287)
* Accept non-admin rAPA users when adding an outbound mirror target.
  (RBL-2408)
* Remove an unused and invalid CSS style that caused warnings in some
  browsers. (RBL-2450)
* The appliance agent log file is now viewable in the Appliance Agent log
  viewer. (RBL-2451)
* Build types may be now included in /srv/rbuilder/config/rbuilder-custom.conf
  using the includeBuildType directive. Previously, one would have to modify
  /srv/rbuilder/config/rbuilder.conf and remove the "excluded" build type